<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background= "@color/surface_light_primary"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/Actualizaciondisp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/fondolinear"
        android:orientation="horizontal"
        android:padding="@dimen/paddinglinear"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/icon_widgets_uploadPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_round"
            android:padding="@dimen/padding"
            android:src="@drawable/ic_round_update_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="arial"
            android:padding="@dimen/padding"
            android:text="@string/act_disponible" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="8" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:fontFamily="arial"
            android:padding="@dimen/padding"
            android:text="@string/descargar_text"
            android:textColor="@color/font_aqua"
            android:textSize="12sp" />


    </LinearLayout>


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="arial"
        android:text="@string/Diacumple"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <Button
        android:id="@+id/button_MainActivity_Terminarjornada"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="arial"
        android:textAllCaps="false"
        android:padding="@dimen/padding"
        android:text="@string/button_terminar_jornada"
        android:textColor="@color/icon_color"
        android:textSize="10sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/Actualizaciondisp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/diacumple_text"
        android:textColor="@color/black"
        android:fontFamily="arial"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/Actualizaciondisp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:textAllCaps="false"
        android:layout_width="370dp"
        android:layout_height="130dp"
        android:layout_marginTop="@dimen/margintop"
        android:background="@color/white"
        android:elevation="@dimen/padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Actualizaciondisp">

        <Button
            android:id="@+id/button3"
            android:layout_width="@dimen/Button_width"
            android:textAllCaps="false"
            android:layout_height="@dimen/Buttonhei"
            android:layout_marginStart="@dimen/marginboton"
            android:backgroundTint="@color/colorboton"
            android:fontFamily="arial"
            android:text="@string/iniciar_text"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout" />

        <Button
            android:id="@+id/ToDetailsAct"
            android:layout_width="@dimen/Button_width"
            android:layout_height="@dimen/Buttonhei"
            android:backgroundTint="@color/white"
            android:fontFamily="arial"
            android:textAllCaps="false"
            android:layout_marginEnd="@dimen/marginboton"
            android:text="@string/detallesbutton"
            android:textColor="@color/colorboton"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="arial"
            android:text="@string/nombreres"
            android:textColor="@color/gris"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/button3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="arial"
            android:text="@string/Lugarcomercial"
            android:textColor="@color/gris"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hora"
            android:textSize="12sp"
            android:fontFamily="arial"
            android:textColor="@color/gris"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:id="@+id/direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:src="@drawable/ic_baseline_assistant_direction_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>